--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>Ejercicios JS</title>
 </head>
 <body>
@@ -18,6 +19,6 @@
       </div>
     </div>
 
-    <script src="./js/e2Pizza.js"></script>
+    <script src="./js/e3Pizza.js"></script>
 </body>
 </html>
